# house-price-predict

./: .dockerignore  .gitignore  Transformation 1.ktr  docker-compose.yaml  dockerfile  package-lock.json  package.json
ai-model/: model.h5  model.json  pyproject.toml
ai-model/src/: __init__.py  train.py
db-data/postgresql/: postmaster.pid
db-data/postgresql/base/1/: 2619  2840  pg_internal.init
db-data/postgresql/base/5/: 1247  1249  1259  16387  16388  16393  16394  16396  16405  16406  16408  16410  2224  2579  2604  2606  2608  2610  2610_vm  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
db-data/postgresql/global/: 1260  pg_control  pg_internal.init
db-data/postgresql/pg_stat/: pgstat.stat
pentaho/: Transformation 1.ktr  data-stream.ktr  transformed-data.txt
src/: app.module.ts
src/modules/price/: price.module.ts
src/modules/price/controllers/: price.controller.ts
src/modules/price/domains/dtos/request/: predict-input.dto.ts
src/modules/price/services/: price.service.ts
